--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install and Build
+      - name: Install
         run: |
           npm install
-          npm run bulid
+
+      - name: Install hexo and Build
+        run: |
+          npm install -g hexo-cli
+          hexo generate
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
